fixed views width with has-toobar

--- a/frontend/theme/extras/main.less
+++ b/frontend/theme/extras/main.less
@@ -17,7 +17,7 @@ body {
   display: flex;
 
   @media only screen and (max-width: @largestMobileScreen) {
-    flex-direction: column;
+    // flex-direction: column;
   }
 
   &.has-toolbar-menu-open,
